test/regress/rt/json_01.expect
[12,"Hello", {"e": null, "f": true, "jhg": ["hello"]}]
[{"jhg": ["hello"], "f": true, "e": null}, "Hello", 12]
123
123
123.4
123.4
123e4
123e4
123.4e5
123.4e5
0.1
0.1
0.03e-4
0.03e-4
"abd\nef"
"abd\nef"
"d\n\t"
"d\n\t"
"av\u0A88xx"
"av\u0A88xx"
"qq\"xx"
"qq\"xx"
true
true
false
false
null
null
[]
[]
{}
{}
  [  ]  
[]
0123
Parse Error pos 1
0123
^
1.e5
Parse Error pos 2
1.e5
-^
1.
Parse Error pos 2
1.
-^
1e+
Parse Error pos 3
1e+
--^
fred
Parse Error pos 4
fred
---^
