test/regress/rt/json_01.flx
include "web/json";


proc check (s:string) {
  println$ s;

  match parse_json s with
  | Good ?j => println$ str j;
  | Bad ?i => 
     println$ "Parse Error pos " + str i;
     println$ s;
     println$ "-" * (i - 1) + "^";
  endmatch
  ;
}

var good = 
  '[12,"Hello", {"e": null, "f": true, "jhg": ["hello"]}]',
  '123', '123.4', '123e4', '123.4e5', '0.1', '0.03e-4',
  '"abd\\nef"','"d\\n\\t"','"av\\u0A88xx"','"qq\\"xx"',
  "true","false","null",'[]','{}','  [  ]  '
;

var bad = 
   '0123','1.e5','1.','1e+','fred'
;
for s in good do check s; done
for s in bad do check s; done


